# ORCA

./: .gitignore  CMakeLists.txt  README.md  VO.h  agents.h  circle.h  dot.h  experiment.sh  experiments.md  geom.h  line.h  main.cpp  remove_exp.sh  vec.h  visualizator.py
experiments/: CMakeLists.txt  input.txt  main.cpp  output.txt  test.txt
gifs/: input1.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input2.txt  input20.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
scripts/: sborka.sh  test.sh
src/: CMakeLists.txt  agents.cpp  agents.h  algo.cpp  algo.h  const.h
src/geometry/: VO.cpp  VO.h  circle.cpp  circle.h  geom.h  line.cpp  line.h  vec.cpp  vec.h
src/visualization/: frame.cpp  frame.h
trash_for_now/: zapusk.sh
